--- a/01Python数据模型/Chapter1Part1.ipynb
+++ b/01Python数据模型/Chapter1Part1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "43db0b55-3dcf-4a70-aa2b-865281c6a562",
    "metadata": {},
    "outputs": [
@@ -13,9 +13,68 @@
       "52\n",
       "Card(rank='2', suit='spades')\n",
       "Card(rank='A', suit='hearts')\n",
-      "Card(rank='2', suit='spades')\n",
+      "Card(rank='7', suit='spades')\n",
       "[Card(rank='2', suit='spades'), Card(rank='2', suit='diamonds'), Card(rank='2', suit='clubs')]\n",
-      "[Card(rank='5', suit='spades'), Card(rank='8', suit='diamonds'), Card(rank='J', suit='clubs'), Card(rank='A', suit='hearts')]\n",
+      "[Card(rank='5', suit='spades'), Card(rank='8', suit='diamonds'), Card(rank='J', suit='clubs'), Card(rank='A', suit='hearts')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import collections\n",
+    "from random import choice\n",
+    "\n",
+    "Card = collections.namedtuple(\n",
+    "    'Card', ['rank', 'suit'])  # namedtuple可以构建一个简单类（只有属性，没有方法）\n",
+    "\n",
+    "\n",
+    "class FrenchDeck:\n",
+    "    ranks = [str(n) for n in range(2, 11)]+list('JQKA')  # 生成扑克牌花色列表\n",
+    "    suits = \"spades diamonds clubs hearts\".split()  # 生成花色列表\n",
+    "\n",
+    "    def __init__(self) -> None:\n",
+    "        '''初始化卡牌'''\n",
+    "        self._cards = [Card(rank, suit)\n",
+    "                       for rank in self.ranks\n",
+    "                       for suit in self.suits]\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        '''获取卡牌数量'''\n",
+    "        return len(self._cards)\n",
+    "\n",
+    "    def __getitem__(self, position):\n",
+    "        '''获取一张卡牌'''\n",
+    "        return self._cards[position]\n",
+    "\n",
+    "\n",
+    "deck = FrenchDeck()\n",
+    "\n",
+    "print(len(deck))  # 52\n",
+    "\n",
+    "print(deck[0])  # Card(rank='2', suit='spades')\n",
+    "\n",
+    "print(deck[-1])  # Card(rank='A', suit='hearts')\n",
+    "\n",
+    "print(choice(deck))  # 随机一张牌\n",
+    "\n",
+    "print(deck[:3])\n",
+    "# [Card(rank='2', suit='spades'), Card(rank='2', suit='diamonds'), Card(rank='2', suit='clubs')]\n",
+    "\n",
+    "print(deck[12::13])\n",
+    "# [Card(rank='5', suit='spades'), Card(rank='8', suit='diamonds'), Card(rank='J', suit='clubs'), Card(rank='A', suit='hearts')]\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "033d8de7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Card(rank='2', suit='spades')\n",
       "Card(rank='2', suit='diamonds')\n",
       "Card(rank='2', suit='clubs')\n",
@@ -67,118 +126,21 @@
       "Card(rank='A', suit='spades')\n",
       "Card(rank='A', suit='diamonds')\n",
       "Card(rank='A', suit='clubs')\n",
-      "Card(rank='A', suit='hearts')\n",
-      "True\n",
-      "False\n",
-      "Card(rank='2', suit='clubs')\n",
-      "Card(rank='2', suit='diamonds')\n",
-      "Card(rank='2', suit='hearts')\n",
-      "Card(rank='2', suit='spades')\n",
-      "Card(rank='3', suit='clubs')\n",
-      "Card(rank='3', suit='diamonds')\n",
-      "Card(rank='3', suit='hearts')\n",
-      "Card(rank='3', suit='spades')\n",
-      "Card(rank='4', suit='clubs')\n",
-      "Card(rank='4', suit='diamonds')\n",
-      "Card(rank='4', suit='hearts')\n",
-      "Card(rank='4', suit='spades')\n",
-      "Card(rank='5', suit='clubs')\n",
-      "Card(rank='5', suit='diamonds')\n",
-      "Card(rank='5', suit='hearts')\n",
-      "Card(rank='5', suit='spades')\n",
-      "Card(rank='6', suit='clubs')\n",
-      "Card(rank='6', suit='diamonds')\n",
-      "Card(rank='6', suit='hearts')\n",
-      "Card(rank='6', suit='spades')\n",
-      "Card(rank='7', suit='clubs')\n",
-      "Card(rank='7', suit='diamonds')\n",
-      "Card(rank='7', suit='hearts')\n",
-      "Card(rank='7', suit='spades')\n",
-      "Card(rank='8', suit='clubs')\n",
-      "Card(rank='8', suit='diamonds')\n",
-      "Card(rank='8', suit='hearts')\n",
-      "Card(rank='8', suit='spades')\n",
-      "Card(rank='9', suit='clubs')\n",
-      "Card(rank='9', suit='diamonds')\n",
-      "Card(rank='9', suit='hearts')\n",
-      "Card(rank='9', suit='spades')\n",
-      "Card(rank='10', suit='clubs')\n",
-      "Card(rank='10', suit='diamonds')\n",
-      "Card(rank='10', suit='hearts')\n",
-      "Card(rank='10', suit='spades')\n",
-      "Card(rank='J', suit='clubs')\n",
-      "Card(rank='J', suit='diamonds')\n",
-      "Card(rank='J', suit='hearts')\n",
-      "Card(rank='J', suit='spades')\n",
-      "Card(rank='Q', suit='clubs')\n",
-      "Card(rank='Q', suit='diamonds')\n",
-      "Card(rank='Q', suit='hearts')\n",
-      "Card(rank='Q', suit='spades')\n",
-      "Card(rank='K', suit='clubs')\n",
-      "Card(rank='K', suit='diamonds')\n",
-      "Card(rank='K', suit='hearts')\n",
-      "Card(rank='K', suit='spades')\n",
-      "Card(rank='A', suit='clubs')\n",
-      "Card(rank='A', suit='diamonds')\n",
-      "Card(rank='A', suit='hearts')\n",
-      "Card(rank='A', suit='spades')\n"
+      "Card(rank='A', suit='hearts')\n"
      ]
     }
    ],
    "source": [
-    "import collections\n",
-    "from random import choice\n",
-    "\n",
-    "Card = collections.namedtuple(\n",
-    "    'Card', ['rank', 'suit'])  # namedtuple可以构建一个简单类（只有属性，没有方法）\n",
-    "\n",
-    "\n",
-    "class FrenchDeck:\n",
-    "    ranks = [str(n) for n in range(2, 11)]+list('JQKA')  # 生成扑克牌花色列表\n",
-    "    suits = \"spades diamonds clubs hearts\".split()  # 生成花色列表\n",
-    "\n",
-    "    def __init__(self) -> None:\n",
-    "        '''初始化卡牌'''\n",
-    "        self._cards = [Card(rank, suit)\n",
-    "                       for rank in self.ranks\n",
-    "                       for suit in self.suits]\n",
-    "\n",
-    "    def __len__(self):\n",
-    "        '''获取卡牌数量'''\n",
-    "        return len(self._cards)\n",
-    "\n",
-    "    def __getitem__(self, position):\n",
-    "        '''获取一张卡牌'''\n",
-    "        return self._cards[position]\n",
-    "\n",
-    "\n",
-    "deck = FrenchDeck()\n",
-    "\n",
-    "print(len(deck))  # 52\n",
-    "\n",
-    "print(deck[0])  # Card(rank='2', suit='spades')\n",
-    "\n",
-    "print(deck[-1])  # Card(rank='A', suit='hearts')\n",
-    "\n",
-    "print(choice(deck))  # 随机一张牌\n",
-    "\n",
-    "print(deck[:3])\n",
-    "# [Card(rank='2', suit='spades'), Card(rank='2', suit='diamonds'), Card(rank='2', suit='clubs')]\n",
-    "\n",
-    "print(deck[12::13])\n",
-    "# [Card(rank='5', suit='spades'), Card(rank='8', suit='diamonds'), Card(rank='J', suit='clubs'), Card(rank='A', suit='hearts')]\n",
-    "\n",
     "for card in deck:\n",
     "    print(card)\n",
     "# Card(rank='2', suit='spades')\n",
     "# Card(rank='2', suit='diamonds')\n",
-    "# ...\n",
-    "\n"
+    "# ...\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "a779a104",
    "metadata": {},
    "outputs": [
@@ -199,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "8e1ec561",
    "metadata": {},
    "outputs": [
