修改01和上次02

--- a/01Python数据模型/Chapter1Part1.ipynb
+++ b/01Python数据模型/Chapter1Part1.ipynb
@@ -2,8 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "43db0b55-3dcf-4a70-aa2b-865281c6a562",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -13,7 +12,7 @@
       "52\n",
       "Card(rank='2', suit='spades')\n",
       "Card(rank='A', suit='hearts')\n",
-      "Card(rank='7', suit='spades')\n",
+      "Card(rank='2', suit='clubs')\n",
       "[Card(rank='2', suit='spades'), Card(rank='2', suit='diamonds'), Card(rank='2', suit='clubs')]\n",
       "[Card(rank='5', suit='spades'), Card(rank='8', suit='diamonds'), Card(rank='J', suit='clubs'), Card(rank='A', suit='hearts')]\n"
      ]
@@ -60,15 +59,12 @@
     "# [Card(rank='2', suit='spades'), Card(rank='2', suit='diamonds'), Card(rank='2', suit='clubs')]\n",
     "\n",
     "print(deck[12::13])\n",
-    "# [Card(rank='5', suit='spades'), Card(rank='8', suit='diamonds'), Card(rank='J', suit='clubs'), Card(rank='A', suit='hearts')]\n",
-    "\n",
-    "\n"
+    "# [Card(rank='5', suit='spades'), Card(rank='8', suit='diamonds'), Card(rank='J', suit='clubs'), Card(rank='A', suit='hearts')]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "033d8de7",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -140,8 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "a779a104",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -161,8 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "8e1ec561",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -257,8 +251,9 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.6"
-  }
+  },
+  "orig_nbformat": 4
  },
  "nbformat": 4,
- "nbformat_minor": 5
+ "nbformat_minor": 2
 }
