--- a/02数据结构/Chapter2Part1.ipynb
+++ b/02数据结构/Chapter2Part1.ipynb
@@ -15,15 +15,107 @@
     }
    ],
    "source": [
-    "symbols='$%^&'\n",
-    "codes1=[]\n",
+    "symbols = '¢£¥€¤'\n",
+    "codes1 = []\n",
     "for symbol in symbols:\n",
     "    codes1.append(ord(symbol))\n",
     "print(codes1)\n",
     "\n",
     "\n",
-    "codes2=[ord(symbol) for symbol in symbols]\n",
-    "print(codes2)"
+    "codes2 = [ord(symbol) for symbol in symbols]\n",
+    "print(codes2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[162, 163, 165, 8364, 164]\n",
+      "[162, 163, 165, 8364, 164]\n"
+     ]
+    }
+   ],
+   "source": [
+    "symbols = '$¢£¥€¤'\n",
+    "beyond_ascii = [ord(s) for s in symbols if ord(s) > 50]\n",
+    "print(beyond_ascii)\n",
+    "\n",
+    "beyond_ascii = list(filter(lambda c: c > 127, map(ord, symbols)))\n",
+    "print(beyond_ascii)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('black', 'S'), ('black', 'M'), ('black', 'L'), ('white', 'S'), ('white', 'M'), ('white', 'L')]\n",
+      "('black', 'S')\n",
+      "('black', 'M')\n",
+      "('black', 'L')\n",
+      "('white', 'S')\n",
+      "('white', 'M')\n",
+      "('white', 'L')\n",
+      "[('black', 'S'), ('white', 'S'), ('black', 'M'), ('white', 'M'), ('black', 'L'), ('white', 'L')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "colors = ['black', 'white']\n",
+    "sizes = ['S', 'M', 'L']\n",
+    "tshirts = [(color, size) for color in colors for size in sizes]\n",
+    "print(tshirts)\n",
+    "\n",
+    "for color in colors:\n",
+    "    for size in sizes:\n",
+    "        print((color, size))\n",
+    "\n",
+    "\n",
+    "tshirts = [(color, size) for size in sizes for color in colors]\n",
+    "print(tshirts)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(36, 162, 163, 165, 8364, 164)\n",
+      "array('I', [36, 162, 163, 165, 8364, 164])\n",
+      "black S\n",
+      "black M\n",
+      "black L\n",
+      "white S\n",
+      "white M\n",
+      "white L\n"
+     ]
+    }
+   ],
+   "source": [
+    "import array\n",
+    "symbols = '$¢£¥€¤'\n",
+    "print(tuple(ord(symbol) for symbol in symbols))\n",
+    "\n",
+    "array1 = array.array('I', (ord(symbol) for symbol in symbols))\n",
+    "print(array1)\n",
+    "\n",
+    "colors = ['black', 'white']\n",
+    "sizes = ['S', 'M', 'L']\n",
+    "for tshirts in ('%s %s' % (c, s) for c in colors for s in sizes):\n",
+    "    print(tshirts)\n"
    ]
   }
  ],
