--- a/02数据结构/Chapter2Part3.ipynb
+++ b/02数据结构/Chapter2Part3.ipynb
@@ -2,92 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "BRA/CE342567\n",
-      "ESP/XDA205856\n",
-      "USA/311958550\n",
-      "USA\n",
-      "BRA\n",
-      "ESP\n"
+      "  $17.50     Pimoroni PiBrella                 \n",
+      "   $4.95     6mm Tactile Switch x20            \n",
+      "  $28.00     Panavise Jr. - PV-201             \n",
+      "  $34.95     PiTFT Mini Kit 320x240            \n",
+      " \n"
      ]
     }
    ],
    "source": [
-    "lax_Coordinates = (33.9425, -118.408056)\n",
-    "city, year, pop, chg, area = ('Tokyo', 2003, 32450, 0.66, 8014)\n",
-    "traveler_ids = [('USA', '311958550'), ('BRA', 'CE342567'),\n",
-    "                ('ESP', 'XDA205856')]\n",
-    "for passport in sorted(traveler_ids):\n",
-    "    print('%s/%s' % passport)\n",
-    "    \n",
-    "for country, _ in traveler_ids:\n",
-    "    print(country)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "33.9425 -118.408056\n",
-      "0 1 [2, 3, 4]\n",
-      "0 1 []\n",
-      "0 [1, 2] 3 4\n"
-     ]
-    }
-   ],
-   "source": [
-    "lax_Coordinates = (33.9425, -118.408056)\n",
-    "latitude,longitude=lax_Coordinates\n",
-    "print(latitude,longitude)\n",
+    "invoice = \"\"\"\n",
+    "0.....6................................40........52...55........\n",
+    "1909  Pimoroni PiBrella                   $17.50     3    $52.50\n",
+    "1489  6mm Tactile Switch x20               $4.95     2     $9.90\n",
+    "1510  Panavise Jr. - PV-201               $28.00     1    $28.00\n",
+    "1601  PiTFT Mini Kit 320x240              $34.95     1    $34.95\n",
+    "\"\"\"\n",
+    "SKU = slice(0, 6)\n",
+    "DESCRIPTION = slice(6, 40)\n",
+    "UNIT_PRICE = slice(40, 52)\n",
+    "QUANTITY = slice(52, 55)\n",
+    "ITEM_TOTAL = slice(55, None)\n",
+    "line_items = invoice.split('\\n')[2:]\n",
     "\n",
-    "a,b,*rest=range(5)\n",
-    "print(a,b,rest)\n",
-    "a, b, *rest = range(2)\n",
-    "print(a,b,rest)\n",
-    "a, *body, c, d = range(5)\n",
-    "print(a, body, c, d )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                |   lat.    |   long.  \n",
-      "Mexico City     |   19.4333 |  -99.1333\n",
-      "New York-Newark |   40.8086 |  -74.0204\n",
-      "Sao Paulo       |  -23.5478 |  -46.6358\n"
-     ]
-    }
-   ],
-   "source": [
-    "metro_areas = [\n",
-    "('Tokyo','JP',36.933,(35.689722,139.691667)), \n",
-    "('Delhi NCR', 'IN', 21.935, (28.613889, 77.208889)),\n",
-    "('Mexico City', 'MX', 20.142, (19.433333, -99.133333)),\n",
-    "('New York-Newark', 'US', 20.104, (40.808611, -74.020386)),\n",
-    "('Sao Paulo', 'BR', 19.649, (-23.547778, -46.635833)),\n",
-    "]\n",
-    "print('{:15} | {:^9} | {:^9}'.format('', 'lat.', 'long.'))\n",
-    "fmt = '{:15} | {:9.4f} | {:9.4f}'\n",
-    "for name, cc, pop, (latitude, longitude) in metro_areas: \n",
-    "    if longitude <= 0: \n",
-    "        print(fmt.format(name, latitude, longitude))"
+    "for item in line_items:\n",
+    "    print(item[UNIT_PRICE], item[DESCRIPTION])\n"
    ]
   },
   {
@@ -99,43 +45,109 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "City(name='Tokyo', country='JP', population=36.933, coordinates=(35.689722, 139.691667))\n",
-      "36.933\n",
-      "(35.689722, 139.691667)\n",
-      "JP\n",
-      "('name', 'country', 'population', 'coordinates')\n",
-      "{'name': 'Delhi NCR', 'country': 'IN', 'population': 21.935, 'coordinates': LatLong(lat=28.613889, long=77.208889)}\n",
-      "name: Delhi NCR\n",
-      "country: IN\n",
-      "population: 21.935\n",
-      "coordinates: LatLong(lat=28.613889, long=77.208889)\n"
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
+      "[0, 1, 20, 30, 5, 6, 7, 8, 9]\n",
+      "[0, 1, 20, 30, 5, 8, 9]\n",
+      "[0, 1, 20, 11, 20, 30, 5, 8, 9]\n",
+      "[0, 1, 100, 30, 5, 8, 9]\n"
      ]
     }
    ],
    "source": [
-    "from collections import namedtuple\n",
-    "City=namedtuple('City','name country population coordinates')\n",
-    "tokyo=City('Tokyo','JP',36.933,(35.689722,139.691667))\n",
-    "print(tokyo)\n",
-    "print(tokyo.population)\n",
-    "print(tokyo.coordinates)\n",
-    "print(tokyo[1])\n",
-    "print(City._fields)\n",
-    "LatLong=namedtuple('LatLong','lat long')\n",
-    "delhi_Data=('Delhi NCR','IN',21.935,LatLong(28.613889,77.208889))\n",
-    "delhi=City._make(delhi_Data)\n",
-    "print(delhi._asdict())\n",
-    "for key,value in delhi._asdict().items():\n",
-    "    print(key+':',value)"
+    "l=list(range(10))\n",
+    "print(l)\n",
+    "l[2:5]=[20,30]\n",
+    "print(l)\n",
+    "del l[5:7]\n",
+    "print(l)\n",
+    "l[3:2]=[11,20]\n",
+    "print(l)\n",
+    "# l[2:5]=100  #error\n",
+    "l[2:5]=[100]\n",
+    "print(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 1, 2, 3, 1, 2, 3, 1, 2, 3, 1, 2, 3]\n",
+      "abcdabcdabcdabcdabcd\n"
+     ]
+    }
+   ],
+   "source": [
+    "l = [1, 2, 3]\n",
+    "print(l * 5)\n",
+    "print(5 * 'abcd')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['_', '_', '_'], ['_', '_', '_'], ['_', '_', '_']]\n",
+      "[['_', '_', '_'], ['_', '_', 'X'], ['_', '_', '_']]\n",
+      "[['_', '_', '_'], ['_', '_', '_'], ['_', '_', '_']]\n",
+      "[['_', '_', 'O'], ['_', '_', 'O'], ['_', '_', 'O']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "board = [['_'] * 3 for i in range(3)] \n",
+    "print(board)\n",
+    "board[1][2] = 'X' \n",
+    "print(board)\n",
+    "\n",
+    "# error\n",
+    "weird_board = [['_'] * 3] * 3 \n",
+    "print(weird_board)\n",
+    "weird_board[1][2] = 'O' \n",
+    "print(weird_board)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['_', 'x', '_'], ['_', 'x', '_'], ['_', 'x', '_']]\n",
+      "[['_', '_', '_'], ['_', '_', '_'], ['_', '_', '_']]\n",
+      "[['_', '_', '_'], ['_', '_', '_'], ['X', '_', '_']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "board = []\n",
+    "for i in range(3):\n",
+    "    row=['_'] * 3 \n",
+    "    board.append(row)\n",
+    "print(board)\n",
+    "board[2][0] = 'X'\n",
+    "print(board)"
    ]
   }
  ],
  "metadata": {
   "interpreter": {
-   "hash": "3b3361eea9ad770e1b9ddf2a02c07134d9907bc8d69d7867e0b684ae753730c4"
+   "hash": "2465f33d6e3a635de7a75c7d49216279c9a4b793e4e7e218304fb87e3283cc16"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.6 64-bit",
+   "display_name": "Python 3.7.9 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -149,7 +161,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.7.9"
   },
   "orig_nbformat": 4
  },
