--- a/02数据结构/Chapter2Part3.ipynb
+++ b/02数据结构/Chapter2Part3.ipynb
@@ -2,21 +2,33 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  $17.50     Pimoroni PiBrella                 \n",
-      "   $4.95     6mm Tactile Switch x20            \n",
-      "  $28.00     Panavise Jr. - PV-201             \n",
-      "  $34.95     PiTFT Mini Kit 320x240            \n",
-      " \n"
+      "bye\n",
+      "elcycib\n",
+      "eccb\n"
      ]
     }
    ],
+   "source": [
+    "s = 'bicycle'\n",
+    "print(s[::3])\n",
+    "\n",
+    "print(s[::-1])\n",
+    "\n",
+    "print(s[::-2])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "invoice = \"\"\"\n",
     "0.....6................................40........52...55........\n",
@@ -140,14 +152,21 @@
     "board[2][0] = 'X'\n",
     "print(board)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l=[1,2,3]\n",
+    "print(id(l))"
+   ]
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "2465f33d6e3a635de7a75c7d49216279c9a4b793e4e7e218304fb87e3283cc16"
-  },
   "kernelspec": {
-   "display_name": "Python 3.7.9 64-bit",
+   "display_name": "Python 3.7.8 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -161,9 +180,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.7.8"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "9168b718e847e4e3c5b37b18f3a6fa0964ddffe866e8d8f3861ac69955210865"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
